# gjallarbro

./: .gitignore  LICENSE  README.md
algorand/: README.md  algorand_contract.code-workspace
algorand/projects/algorand_contract/: .algokit.toml  README.md  pyproject.toml  pytest.ini
algorand/projects/algorand_contract/.algokit/: .copier-answers.yml
algorand/projects/algorand_contract/.tours/: getting-started-with-your-algokit-project.tour
algorand/projects/algorand_contract/smart_contracts/artifacts/leak_swap/: LeakSwap.approval.puya.map  LeakSwap.approval.teal  LeakSwap.arc32.json  LeakSwap.clear.puya.map  LeakSwap.clear.teal
algorand/projects/algorand_contract/smart_contracts/leak_swap/: contract.py  deploy_config.py
algorand/projects/algorand_contract/tests/: conftest.py  monero_utils.py  test_contract.py  test_monero_utils.py  test_utils.py  utils.py
algorand/projects/algorand_contract/tests/AlgoSwap/: test_contract.py
contracts/algo-ed25519/: contract.py
contracts/algo-ed25519/tests/: bob_disconnects.sh  functions.sh
modgunn/: algorand_utils.py  contract.py  dryrun.msgp  generate_with_placeholders.sh  main.py  monero_setup.sh  monero_utils.py  outputs.txt  requirements.txt  utils.py
modgunn/algorand/: main.py  utils.py
modgunn/algorand/contracts/algo_ed25519/: contract.py  contract_old.py
modgunn/algorand/contracts/algo_ed25519/tests/: adversial_scenario.sh  alice_regrets.sh  functions.sh  ideal_scenario.sh  (+1 more)
modgunn/algorand/contracts/test/: contract.py
modgunn/monero/: main.py  test.py  utils.py
modgunn/tests/: alice_disconnects.sh
