[tool.poetry]
name = "algorand_contract"
version = "0.1.0"
description = "Algorand smart contracts"
authors = ["HashMapsData2Value <83883690+HashMapsData2Value@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
algokit-utils = "^2.4.0"
python-dotenv = "^1.0.0"
algorand-python = "^2.0.0"
algorand-python-testing = "^0.4.0"
pytest = "^8.3.4"
pynacl = "^1.5.0"
pycryptodome = "^3.21.0"
monero = "^1.1.1"
algokit-client-generator = "^1.1.7"

[tool.poetry.group.dev.dependencies]
algokit-client-generator = "^1.1.3"
puyapy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

